<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.setting.SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/line_length"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/setting_normal"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_caption" />

        <FrameLayout
            android:id="@+id/notify_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_notify"
                android:textColor="@color/black_normal"
                android:textSize="@dimen/text_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/setting_notify_subtitle"
                android:textSize="@dimen/text_tag" />

            <CheckBox
                android:id="@+id/notify_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@android:drawable/divider_horizontal_bright" />

        <FrameLayout
            android:id="@+id/update_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_update"
                android:textColor="@color/black_normal"
                android:textSize="@dimen/text_body" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@android:drawable/divider_horizontal_bright" />

        <FrameLayout
            android:id="@+id/cache_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting_cache"
                android:textColor="@color/black_normal"
                android:textSize="@dimen/text_body" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@android:drawable/divider_horizontal_bright" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/line_length"
            android:text="@string/setting_network"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_caption" />

        <FrameLayout
            android:id="@+id/wifi_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="8dp"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_wifi"
                android:textColor="@color/black_normal"
                android:textSize="@dimen/text_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/setting_wifi_subtitle"
                android:textSize="@dimen/text_tag" />

            <CheckBox
                android:id="@+id/wifi_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:background="@android:drawable/divider_horizontal_bright" />

        <Button
            android:id="@+id/logout"
            android:layout_width="240dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:text="@string/setting_logout"
            android:textColor="@color/white_normal" />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>