<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center_vertical"
                android:text="@string/collection_edit_cover"
                android:textColor="@color/black_normal"
                android:textSize="@dimen/text_body" />

            <ImageView
                android:id="@+id/collection_cover"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="center_vertical|right"
                android:src="@drawable/moefou" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@android:drawable/divider_horizontal_bright" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="@dimen/horizontal_padding"
            android:paddingRight="@dimen/horizontal_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:gravity="center_vertical"
                android:text="@string/collection_edit_name"
                android:textColor="@color/black_normal"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/collection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:lines="1"
                android:maxWidth="160dp"
                android:padding="4dp"
                android:text="@string/collection_edit_content"
                android:textColor="@color/black_alpha"
                android:textSize="@dimen/text_body" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@android:drawable/divider_horizontal_bright" />
        </FrameLayout>

        <EditText
            android:id="@+id/collection_des"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="left|top"
            android:hint="@string/collection_edit_hint"
            android:maxLength="500"
            android:padding="16dp"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/text_body" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>