<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/recently_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginBottom="@dimen/line_length_half"
        android:background="@color/white_normal"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:src="@drawable/ic_recently_playlist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/item_height"
            android:text="@string/collect_recently_title"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/text_subhead" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/favourite_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@color/white_normal"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:padding="@dimen/icon_inline_padding"
            android:src="@drawable/ic_collection_album" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/item_height"
            android:text="@string/collect_album_title"
            android:textColor="@color/black_normal"
            android:textSize="@dimen/text_subhead" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="@color/grey_alpha"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/horizontal_padding"
        android:paddingRight="@dimen/horizontal_padding"
        android:text="@string/collect_title"
        android:textSize="@dimen/text_body" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/recycler_collection_listitem">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>