<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.cpacm.moemusic.ui.beats.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="?attr/colorAccent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white_normal"
            android:textSize="@dimen/text_display1"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:layout_marginTop="@dimen/line_height">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_editlayout"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edittext_height"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical|start"
                android:layout_marginTop="@dimen/line_height"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:drawableLeft="@drawable/ic_login_user"
                    android:drawablePadding="@dimen/line_height"
                    android:gravity="center_vertical"
                    android:hint="@string/login_user"
                    android:singleLine="true"
                    android:textSize="@dimen/text_subhead" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_editlayout"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edittext_height"
                android:layout_below="@id/user_editlayout"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical|start"
                android:layout_marginTop="@dimen/line_height"
                android:gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"

                    android:layout_height="@dimen/edittext_height"
                    android:drawableLeft="@drawable/ic_login_password"
                    android:drawablePadding="@dimen/line_height"
                    android:gravity="center_vertical"
                    android:hint="@string/login_password"
                    android:singleLine="true"
                    android:textSize="@dimen/text_subhead" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
